--- a/static/css/custom_2.css
+++ b/static/css/custom_2.css
@@ -78,9 +78,9 @@
     padding-top: 40px;
     text-transform:uppercase;
 }
-.feature_header {
+/*.feature_header {
     padding-top: 20px;
-}
+}*/
 /*.main_feature{
     margin: 40px 0px;
 }*/
